--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,8 @@
-<h1>Home</h1>
+<% include partials/header %>
+
+<h1>YelpCamp</h1>
+
+<!-- <img src="" alt=""> -->
+<a href="/campgrounds">View all campgrounds</a>
+
+<% include partials/footer %>
